--- a/themes/mukurtu_v4/css/style.css
+++ b/themes/mukurtu_v4/css/style.css
@@ -2217,6 +2217,7 @@ details.form-wrapper summary + div {
   padding: 1rem;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  overflow: hidden;
 }
 .glightbox-clean .gslide-inline img {
   display: block;
